<resources>
    <string name="app_name">Турист в России</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app_1">Приложение \"Турист в России\" предназначено для всех, кто планирует посетить Россию и хочет получить информацию о туристических достопримечательностях, культуре, традициях, современной жизни и других интересных местах страны.</string>
    <string name="about_app_2">1. Установите приложение \"Турист в России\" на свое устройство.\n2. Откройте приложение и изучайте информацию о туристических местах, событиях и культуре России.\n3. Наслаждайтесь своим путешествием по России!</string>
    <string name="FIO">Шанаев А.В.</string>
    <string name="group">Группа: ИКБО-03-22</string>
    <string name="year">Год разработки: 2024</string>
    <string name="email">Email: alexandrshanaev23@gmail.com</string>
    <string name="choose_image">Выбрать изображение</string>
    <string name="add">Добавить</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="instruction1">Пользователь при входе в приложение имеет возможность авторизоваться, зарегистрироваться или войти как гость.</string>
    <string name="instruction2">Пользователи могут быть 3 видов: администратор, авторизованный пользователь и гость.</string>
    <string name="instruction3">Гость имеет возможность просматривать список достопримечательностей, данные о них и смотреть их на карте.</string>
    <string name="instruction4">Авторизованный пользователь вдобавок к этому может создать персонализированный список мест, редактировать его в дальнейшем. Также есть возможность редактировать профиль, в том числе сменить пароль.</string>
    <string name="instruction5">Администратор вдобавок к возможностям гостя и авторизованного пользователя может добавлять, редактировать и удалять достопримечательности из списка мест.</string>
</resources>