<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Инструкция для пользователя"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction1"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/textViewStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction2"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        />

    <TextView
        android:id="@+id/textViewStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction3"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewStep4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction4"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/textViewStep5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction5"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
